--- a/Mango.Services.ShoppingCartAPI/Mango.Services.ShoppingCartAPI.csproj
+++ b/Mango.Services.ShoppingCartAPI/Mango.Services.ShoppingCartAPI.csproj
@@ -24,4 +24,8 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.2.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Models\Dto" />
+    </ItemGroup>
+
 </Project>
