--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7222/",
     "IdentityAPI": "https://localhost:7283/",
-    "ShoppingCartAPI": "https://localhost:7054/"
+    "ShoppingCartAPI": "https://localhost:7054/",
+    "CouponAPI": "https://localhost:7286/"
   } 
 }
