--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ServiceBus": {
+    "ConnectionString" : "test"
   }
 }
