--- a/Mango.MessageBus/Mango.MessageBus.csproj
+++ b/Mango.MessageBus/Mango.MessageBus.csproj
@@ -11,4 +11,10 @@
       <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="Microsoft.Extensions.Options, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.0\Microsoft.Extensions.Options.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 </Project>
