128. Setting Up Constans

--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoOrderAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "ServiceBusConnectionString": "test",
+  "CheckoutMessageTopic": "checkoutmessagetopic",
+  "SubscriptionName": "mangoOrderSubscription"
 }
