--- a/Mango.Services.OrderAPI/Mango.Services.OrderAPI.csproj
+++ b/Mango.Services.OrderAPI/Mango.Services.OrderAPI.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>996873b6-9904-4114-9c26-1473d0512608</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
