133. Create Coupon Repository Interface

--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "ServiceUrls": {
+    "CouponAPI": "https://localhost:7286/"
+  },
   "ServiceBus": {
     "ConnectionString" : "test"
   }
