--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -11,5 +11,6 @@
   },
   "ServiceBusConnectionString": "test",
   "CheckoutMessageTopic": "checkoutmessagetopic",
-  "SubscriptionName": "mangoOrderSubscription"
+  "SubscriptionName": "mangoOrderSubscription",
+  "OrderPaymentProcessTopic": "orderpaymentprocesstopic"
 }
