--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -12,7 +12,5 @@
   "ServiceUrls": {
     "CouponAPI": "https://localhost:7286/"
   },
-  "ServiceBus": {
-    "ConnectionString" : "test"
-  }
+  "ServiceBusConnectionString": "test"
 }
