Demo - Complete Flow

--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -12,5 +12,6 @@
   "ServiceBusConnectionString": "test",
   "CheckoutMessageTopic": "checkoutmessagetopic",
   "SubscriptionName": "mangoOrderSubscription",
-  "OrderPaymentProcessTopic": "orderpaymentprocesstopic"
+  "OrderPaymentProcessTopic": "orderpaymentprocesstopic",
+  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
 }
