153. Add Email Microservice

--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoOrderAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ServiceBusConnectionString": "test",
-  "CheckoutMessageTopic": "checkoutmessagetopic",
+  "CheckoutMessageTopic": "checkoutqueue",
   "SubscriptionName": "mangoOrderSubscription",
   "OrderPaymentProcessTopic": "orderpaymentprocesstopic",
   "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
