155. Setup Email Service Project Part 2

--- a/Mango.Services.Email/Mango.Services.Email.csproj
+++ b/Mango.Services.Email/Mango.Services.Email.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <UserSecretsId>9d5b15c4-f818-4fd9-b7b8-3675432356a5</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
