--- a/Mango.Services.Email/appsettings.json
+++ b/Mango.Services.Email/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoOrderAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ServiceBusConnectionString": "test",
+  "SubscriptionName": "emailSubscription",
+  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
 }
