--- a/Mango.Services.Email/appsettings.json
+++ b/Mango.Services.Email/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoOrderAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=MangoEmailAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "ServiceBusConnectionString": "test",
   "SubscriptionName": "emailSubscription",
