--- a/Mango.Gateway.Solution/appsettings.json
+++ b/Mango.Gateway.Solution/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Routes": [{
+    "DownstreamPathTemplate": "/api/products",
+    "DownstreamScheme": "https",
+    "DownstreamHostAndPorts": [
+      {
+        "Host": "localhost",
+        "Port": 7222
+      }
+    ],
+    "UpstreamPathTemplate": "/api/products",
+    "UpstreamHttpMethod": [ "GET" ]
+  }],
+  "GlobalConfiguration": {
+    "BaseUrl": "https://localhost:7027/"
+  }
 }
