--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -7,9 +7,10 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:7222/",
     "IdentityAPI": "https://localhost:7283/",
-    "ShoppingCartAPI": "https://localhost:7054/",
-    "CouponAPI": "https://localhost:7286/"
+    
+    "ProductAPI": "https://localhost:7027",
+    "ShoppingCartAPI": "https://localhost:7027",
+    "CouponAPI": "https://localhost:7027"
   } 
 }
