162. Ocelot setup for products API

--- a/Mango.Gateway.Solution/appsettings.json
+++ b/Mango.Gateway.Solution/appsettings.json
@@ -6,18 +6,64 @@
     }
   },
   "AllowedHosts": "*",
-  "Routes": [{
-    "DownstreamPathTemplate": "/api/products",
-    "DownstreamScheme": "https",
-    "DownstreamHostAndPorts": [
-      {
-        "Host": "localhost",
-        "Port": 7222
+  "Routes": [
+    {
+      "DownstreamPathTemplate": "/api/products",
+      "DownstreamScheme": "https",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 7222
+        }
+      ],
+      "UpstreamPathTemplate": "/api/products",
+      "UpstreamHttpMethod": [ "GET" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/products/{id}",
+      "DownstreamScheme": "https",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 7222
+        }
+      ],
+      "UpstreamPathTemplate": "/api/products/{id}",
+      "UpstreamHttpMethod": [ "GET" ]
+    },
+    {
+      "DownstreamPathTemplate": "/api/products",
+      "DownstreamScheme": "https",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 7222
+        }
+      ],
+      "UpstreamPathTemplate": "/api/products",
+      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "mango" ]
       }
-    ],
-    "UpstreamPathTemplate": "/api/products",
-    "UpstreamHttpMethod": [ "GET" ]
-  }],
+    },
+    {
+      "DownstreamPathTemplate": "/api/products/{id}",
+      "DownstreamScheme": "https",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "localhost",
+          "Port": 7222
+        }
+      ],
+      "UpstreamPathTemplate": "/api/products/{id}",
+      "UpstreamHttpMethod": [ "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "mango" ]
+      }
+    }
+  ],
   "GlobalConfiguration": {
     "BaseUrl": "https://localhost:7027/"
   }
